--- a/core/Makefile
+++ b/core/Makefile
@@ -2,10 +2,10 @@ ccc: parser.c lexer.c
 	cc parser.c lexer.c ast.c -o ccc -lfl
 
 paeser.c: parser.y
-	bison -d -o parser.c parser.y
+	bison --defines -o parser.c parser.y
 
 lexer.c: lexer.l
 	flex -o lexer.c lexer.l
 
 clean:
-	rm ccc parser.c lexer.c
+	rm ccc parser.c lexer.c parser.h
